adding rpimonitor daemon and supervisor elastic search conf files

--- a/confs/supervisor/conf.d/elasticsearch.conf
+++ b/confs/supervisor/conf.d/elasticsearch.conf
@@ -1,7 +1,8 @@
 [program:elasticsearch]
-command=/home/pi/Downloads/elasticsearch-2.1.1/bin/elasticsearch -d
+command=/home/pi/Downloads/elasticsearch/bin/elasticsearch 
 autostart=true
 autorestart=unexpected
 numprocs=1
+user=pi
 stdout_logfile=/tmp/elasticsearch.log
 stderr_logfile=/tmp/elasticsearch.err
