latest fstab and interfaces

--- a/confs/dhcpcd.conf
+++ b/confs/dhcpcd.conf
@@ -40,15 +40,8 @@ slaac private
 # server, but it should not be run by default.
 nohook lookup-hostname
 
-# static ip for wireless
-interface wlan0
-static ip_address=192.168.1.40/24
-static routers=192.168.1.1
-static domain_name_servers=192.168.1.1 8.8.8.8
-
-
-# static ip for wireless
+# static ip address for LAN
 interface eth0
-static ip_address=192.168.1.41/24
+static ip_address=192.168.1.51/24
 static routers=192.168.1.1
 static domain_name_servers=192.168.1.1 8.8.8.8
